--- a/starter/package.json
+++ b/starter/package.json
@@ -13,23 +13,37 @@
     "lint:fix": "eslint --ext .js,.vue . --fix"
   },
   "dependencies": {
+    "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/markdownit": "^1.2.7",
+    "@nuxtjs/robots": "^2.5.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/strapi": "^0.1.6",
+    "bootstrap-4-grid": "^3.4.0",
+    "date-fns": "^2.21.1",
     "graphql": "^14.5.8",
-    "moment": "^2.29.0",
     "nuxt": "^2.14.6",
-    "uikit": "^3.2.3"
+    "qs": "^6.10.1",
+    "vue-infinite-loading": "^2.4.5",
+    "vue-social-sharing": "^3.0.7"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.9.6",
+    "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.1.0",
+    "bourbon": "^7.0.0",
     "core-js": "^3.6.5",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^2.1.2"
+    "fibers": "^5.0.0",
+    "node-sass": "^5.0.0",
+    "nuxt-lazysizes": "^1.2.2",
+    "prettier": "^2.1.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1"
   },
   "license": "MIT"
 }
