--- a/starter/.env.example
+++ b/starter/.env.example
@@ -2,4 +2,4 @@ GTM_ID = "GTM-XXXXXXX"
 STRAPI_URL = "http://localhost:1337"
 BASE_URL = "http://localhost:3000"
 CLOUDINARY_CLOUD_NAME = "*"
-ROUTES_TO_EXCLUDE = "search/"
+ROUTES_TO_EXCLUDE = "/search"
